Add animation, integrations, and complete pipeline infrastructure
This commit adds comprehensive animation capabilities, social media integrations,
image generation workflows, and orchestration tools to complete the ExcuseMyFrench
video generation pipeline.

## Major Features Added

### Animation & Lip-Sync
- **scripts/animate.py**: Complete lip-sync animation using SadTalker/Wav2Lip
  - Supports both animation methods with configurable quality settings
  - Path traversal protection and comprehensive validation
  - Batch processing from timeline.json
  - Integration with existing pipeline

### Instagram Integration
- **scripts/post_instagram.py**: Automated Instagram posting via Meta Graph API
  - Upload videos as Reels with captions and hashtags
  - Rate limiting with exponential backoff
  - Posting history tracking to avoid duplicates
  - Dry-run mode for testing

- **scripts/generate_caption.py**: AI-powered caption generation
  - Context-aware captions from script content
  - Hashtag suggestions based on trending topics
  - Character voice consistency

- **docs/INSTAGRAM_*.md**: Complete Instagram setup documentation
  - API setup guide, quick start, and API reference
  - Step-by-step authentication flow
  - Troubleshooting common issues

### Image Generation & Training
- **scripts/train_dreambooth.py**: DreamBooth training for custom character models
  - Train Stable Diffusion models for consistent character appearance
  - Support for SD 1.5 and SDXL base models
  - Configurable hyperparameters and validation

- **scripts/prepare_training_data.py**: Training data preparation
  - Image preprocessing, resizing, and augmentation
  - Caption generation for training images
  - Dataset quality validation

- **scripts/generate_character_image.py**: Generate images using trained models
  - Batch generation with different emotions and poses
  - Quality control and filtering
  - Integration with image library

### ComfyUI Integration
- **scripts/setup_comfyui.py**: Autom

--- a/config/.env.example
+++ b/config/.env.example
@@ -60,9 +60,15 @@ MUSIC_VOLUME=0.2  # Background music volume (0.0 - 1.0)
 # -----------------------------------------------------------------------------
 # Meta/Instagram API
 # Setup guide: https://developers.facebook.com/docs/instagram-api/getting-started
+# Note: You need an Instagram Business Account and Meta App
 META_ACCESS_TOKEN=your-meta-access-token-here
 INSTAGRAM_BUSINESS_ACCOUNT_ID=your-instagram-business-account-id-here
 INSTAGRAM_USER_ID=your-instagram-user-id-here
+
+# Instagram Posting Settings
+INSTAGRAM_POST_ENABLED=true  # Enable/disable posting
+INSTAGRAM_HASHTAGS=#frenchbulldog #comedy #funny #reels #dogsofinstagram #fyp
+INSTAGRAM_CAPTION_TEMPLATE={hook}\n\n{content}\n\n{hashtags}
 
 # TikTok API (Optional - requires approval)
 # Setup guide: https://developers.tiktok.com/
@@ -87,8 +93,10 @@ WAN_MODEL_PATH=models/wan2.2
 # Video Generation Settings
 # -----------------------------------------------------------------------------
 # ComfyUI (local installation)
-COMFYUI_PATH=/path/to/ComfyUI
-COMFYUI_API_URL=http://127.0.0.1:8188
+# For Windows, use forward slashes or double backslashes: D:/ComfyUI or D:\\ComfyUI
+COMFYUI_PATH=D:/ComfyUI
+COMFYUI_SERVER_URL=http://127.0.0.1:8188
+COMFYUI_OUTPUT_DIR=data/comfyui_output
 
 # Video Format
 VIDEO_WIDTH=1080  # Instagram/TikTok vertical format
